# bigbench

./: .gitignore  AGENTS.md  README.md  features.json  report.md  report_20260412_133131.json  report_20260412_133131.md  validation-contract.md  validation-state.json
.factory/: init.sh  services.yaml
.factory/skills/benchmark-creator/: SKILL.md
.factory/skills/task-author/: SKILL.md
.factory/skills/web-builder/: SKILL.md
.factory/validation/tasks/scrutiny/: synthesis.json
runner/: pyproject.toml
runner/src/benchmark/: __init__.py  cli.py  grader.py  llm_client.py  loader.py  models.py  report.py  results.py  runner.py
runner/tests/: __init__.py  test_cli.py  test_grader.py  test_llm_client.py  test_loader.py  test_models.py  test_report.py  test_results.py
tasks/: schema.yaml
tasks/planning/: PLAN-001.yaml  PLAN-002.yaml  PLAN-003.yaml  PLAN-004.yaml  PLAN-005.yaml  PLAN-006.yaml  PLAN-007.yaml  PLAN-008.yaml  PLAN-009.yaml  PLAN-010.yaml
tasks/product-mind/: PROD-001.yaml  PROD-002.yaml  PROD-003.yaml  PROD-004.yaml  PROD-005.yaml  PROD-006.yaml  PROD-007.yaml  PROD-008.yaml  PROD-009.yaml  PROD-010.yaml
tasks/software-engineering/: SE-001.yaml  SE-002.yaml  SE-003.yaml  SE-004.yaml  SE-005.yaml  SE-006.yaml  SE-007.yaml  SE-008.yaml  SE-009.yaml  SE-010.yaml  SE-011.yaml  SE-012.yaml
tasks/startup-mind/: START-001.yaml  START-002.yaml  START-003.yaml  START-004.yaml  START-005.yaml  START-006.yaml  START-007.yaml  START-008.yaml  START-009.yaml  START-010.yaml
web/: .gitignore  package.json  pnpm-lock.yaml
web/src/app/: layout.tsx  page.tsx
web/src/components/: CategoryRadarChart.tsx  ImportButton.tsx
web/src/lib/: store.ts  types.ts
(+5 files in other folders)
